--- a/file.html
+++ b/file.html
@@ -35,12 +35,12 @@
 <body>
 
     <header>
-        <h1>Welcome to My Simple Website</h1>
+        <h1>Today is Monday</h1>
     </header>
 
     <main>
         <h2>Hello, world!</h2>
-        <p>This is a simple HTML file hosted on GitHub.</p>
+        <p>Monday.</p>
         <p>Feel free to make changes and see them live on your site!</p>
     </main>
 
